File upload and file get API done.
